--- a/internal/httpapi/templates/landing.tmpl
+++ b/internal/httpapi/templates/landing.tmpl
@@ -6,6 +6,7 @@
     <title>LoopAware • Close the feedback loop</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" integrity="sha384-XGjxtQfXaH2tnPFa9x+ruJTuLE3Aa6LhHSWRr1XeTyhezb4abCG4ccI5AkVDxqC+" crossorigin="anonymous" />
+    <link rel="icon" type="image/svg+xml" href="{{.FaviconDataURI}}" />
     <style>
       .landing-body {
         transition: background-color 0.3s ease, color 0.3s ease;
