LA-51 separate landing and dashboard themes

--- a/internal/httpapi/templates/landing.tmpl
+++ b/internal/httpapi/templates/landing.tmpl
@@ -188,7 +188,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
       (function() {
-        var landingThemeStorageKey = 'landing_theme';
+        var landingThemeStorageKey = 'loopaware_landing_theme';
+        var landingLegacyThemeStorageKey = 'landing_theme';
         var themeToggleElement = document.getElementById('landing-theme-toggle');
         var rootElement = document.body;
         function applyLandingTheme(theme) {
@@ -200,15 +201,29 @@
             themeToggleElement.checked = normalizedTheme === 'light';
           }
         }
-        function initializeLandingTheme() {
+        function loadLandingTheme() {
           var storedTheme = localStorage.getItem(landingThemeStorageKey);
+          if (storedTheme === null) {
+            var legacyStoredTheme = localStorage.getItem(landingLegacyThemeStorageKey);
+            if (legacyStoredTheme === 'light' || legacyStoredTheme === 'dark') {
+              storedTheme = legacyStoredTheme;
+              localStorage.setItem(landingThemeStorageKey, storedTheme);
+            }
+          }
+          return storedTheme;
+        }
+        function initializeLandingTheme() {
+          var storedTheme = loadLandingTheme();
           applyLandingTheme(storedTheme);
+        }
+        function persistLandingTheme(theme) {
+          localStorage.setItem(landingThemeStorageKey, theme);
         }
         if (themeToggleElement) {
           themeToggleElement.addEventListener('change', function(event) {
             var nextTheme = event.target.checked ? 'light' : 'dark';
             applyLandingTheme(nextTheme);
-            localStorage.setItem(landingThemeStorageKey, nextTheme);
+            persistLandingTheme(nextTheme);
           });
         }
         initializeLandingTheme();
