--- a/internal/httpapi/templates/landing.tmpl
+++ b/internal/httpapi/templates/landing.tmpl
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" integrity="sha384-XGjxtQfXaH2tnPFa9x+ruJTuLE3Aa6LhHSWRr1XeTyhezb4abCG4ccI5AkVDxqC+" crossorigin="anonymous" />
     <link rel="icon" type="image/svg+xml" href="{{.FaviconDataURI}}" />
+    <script src="https://loopaware.mprlab.com/widget.js?site_id=a3222433-92ec-473a-9255-0797226c2273"></script>
     <style>
       .landing-body {
         transition: background-color 0.3s ease, color 0.3s ease;
